Fix gradient on iOS

--- a/themes/vuesnippets/assets/scss/_snippet.scss
+++ b/themes/vuesnippets/assets/scss/_snippet.scss
@@ -109,22 +109,13 @@
       width: 100%;
       height: 100%;
       z-index: 99;
+      box-shadow: inset 0 -60px 50px -10px #282c34;
     }
 
     .content {
       overflow: hidden;
       max-height: 192px;
       position: relative;
-
-      &::after {
-        content: " ";
-        display: block;
-        position: absolute;
-        height: 64px;
-        width: 100%;
-        bottom: 0;
-        background: linear-gradient(to bottom, rgba(193,193,193,0) 0%,rgba(40,44,52,0.98) 65%,rgba(40,44,52,1) 66%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-      }
     }
   }
 }
